@@ -1,3 +1,8 @@
+2008-08-02  Ales Hakl  <ales at hakl dot net>
+
+	* src/conditions.c (dfsch__conditions_register): interface to
+	condition system.
+
 2008-07-31  Ales Hakl  <ales at hakl dot net>
 
 	* src/control.c (throw): throw function 
